# gigabyte-keyboard-rgb

./: CONTRIBUTING.md  README.md  install.sh  pyproject.toml  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_model.md
data/: gigabyte-keyboard-rgb-tray.desktop
src/gigabyte_keyboard_rgb/: cli.py  config.py  paths.py  profiles.py  protocol.py  tray.py
src/gigabyte_keyboard_rgb/profile_data/: 0414_8105.json
tests/: test_profiles.py  test_protocol.py
